{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 38,
  "lineage": "0ca44581-e82e-1f7a-0932-e3db41b96192",
  "resources": [
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046aac036b1d0c10f",
            "domain": "vpc",
            "id": "eipalloc-046aac036b1d0c10f",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-16-144-66.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.144.66",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089a545a9ed9893b6",
            "arn": "arn:aws:ec2:us-east-2:077560370356:instance/i-0104c8a62331fd6c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0104c8a62331fd6c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07780dfe18a93287b",
            "private_dns": "ip-10-0-6-188.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.188",
            "public_dns": "ec2-3-17-148-91.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.148.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da8dafc341715960",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06243b77948e6d5d5",
            "tags": {
              "Name": "bastion.basic-cluster"
            },
            "tags_all": {
              "Name": "bastion.basic-cluster"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-003f2d1079edb8b05"
            ]
          },
          "dependencies": [
            "module.kubernetes.aws_key_pair.ssh-key",
            "module.kubernetes.aws_security_group.bastion_node",
            "module.kubernetes.aws_subnet.utility",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_ami.latest-amazon-linux-image",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:internet-gateway/igw-005700e60cff16848",
            "id": "igw-005700e60cff16848",
            "owner_id": "077560370356",
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:077560370356:loadbalancer/net/api-basic-cluster/9bef002f70aed071",
            "arn_suffix": "net/api-basic-cluster/9bef002f70aed071",
            "dns_name": "api-basic-cluster-9bef002f70aed071.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:077560370356:loadbalancer/net/api-basic-cluster/9bef002f70aed071",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "api-basic-cluster",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0fa1dbad54acebf8d"
              }
            ],
            "subnets": [
              "subnet-0fa1dbad54acebf8d"
            ],
            "tags": {
              "KubernetesCluster": "basic-cluster",
              "Name": "api.basic-cluster",
              "kubernetes.io/cluster/basic-cluster": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "basic-cluster",
              "Name": "api.basic-cluster",
              "kubernetes.io/cluster/basic-cluster": "owned"
            },
            "vpc_id": "vpc-0faa126c2b365b656",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.kubernetes.aws_subnet.public01",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "k8s-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:077560370356:listener/net/api-basic-cluster/9bef002f70aed071/323116542730e590",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:077560370356:targetgroup/control-plane/acfe1f50ae19d3ef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:077560370356:listener/net/api-basic-cluster/9bef002f70aed071/323116542730e590",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:077560370356:loadbalancer/net/api-basic-cluster/9bef002f70aed071",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_lb.api-k8s-local",
            "module.kubernetes.aws_lb_target_group.control-plane",
            "module.kubernetes.aws_subnet.public01",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control-plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:077560370356:targetgroup/control-plane/acfe1f50ae19d3ef",
            "arn_suffix": "targetgroup/control-plane/acfe1f50ae19d3ef",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:077560370356:targetgroup/control-plane/acfe1f50ae19d3ef",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "control-plane",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046aac036b1d0c10f",
            "connectivity_type": "public",
            "id": "nat-02c5a07216bff0350",
            "network_interface_id": "eni-0632f1a37398f0edf",
            "private_ip": "10.0.6.174",
            "public_ip": "3.16.144.66",
            "subnet_id": "subnet-06243b77948e6d5d5"
          },
          "dependencies": [
            "module.kubernetes.aws_eip.eip",
            "module.kubernetes.aws_subnet.utility",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-072b910f4224752b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02c5a07216bff0350",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-072b910f4224752b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_eip.eip",
            "module.kubernetes.aws_nat_gateway.natgw",
            "module.kubernetes.aws_route_table.private_rt",
            "module.kubernetes.aws_subnet.utility",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route",
      "name": "public01_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-005700e60cff16848",
            "id": "r-rtb-050032709fec1039f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050032709fec1039f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_internet_gateway.igw",
            "module.kubernetes.aws_route_table.public_rt",
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:route-table/rtb-072b910f4224752b4",
            "id": "rtb-072b910f4224752b4",
            "owner_id": "077560370356",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:route-table/rtb-050032709fec1039f",
            "id": "rtb-050032709fec1039f",
            "owner_id": "077560370356",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e98d9f5ad2847b94",
            "route_table_id": "rtb-072b910f4224752b4",
            "subnet_id": "subnet-07e988f6482259664"
          },
          "dependencies": [
            "module.kubernetes.aws_route_table.private_rt",
            "module.kubernetes.aws_subnet.private01",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce17cb7a9756c3b8",
            "route_table_id": "rtb-050032709fec1039f",
            "subnet_id": "subnet-0fa1dbad54acebf8d"
          },
          "dependencies": [
            "module.kubernetes.aws_route_table.public_rt",
            "module.kubernetes.aws_subnet.public01",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "utility",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aa4ab5db446f78c",
            "route_table_id": "rtb-050032709fec1039f",
            "subnet_id": "subnet-06243b77948e6d5d5"
          },
          "dependencies": [
            "module.kubernetes.aws_route_table.public_rt",
            "module.kubernetes.aws_subnet.utility",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:security-group/sg-003f2d1079edb8b05",
            "description": "Allow required traffic to the bastion node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003f2d1079edb8b05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from outside",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_node",
            "name_prefix": "",
            "owner_id": "077560370356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_bastion"
            },
            "tags_all": {
              "Name": "sg_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_master_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:security-group/sg-0dbbda2a974714cc7",
            "description": "Master nodes security group",
            "egress": [],
            "id": "sg-0dbbda2a974714cc7",
            "ingress": [],
            "name": "k8s_masters_basic-cluster",
            "name_prefix": "",
            "owner_id": "077560370356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "basic-cluster_nodes",
              "kubernetes.io/cluster/basic-cluster": "owned"
            },
            "tags_all": {
              "Name": "basic-cluster_nodes",
              "kubernetes.io/cluster/basic-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:security-group/sg-0a9998e8428c3138e",
            "description": "Worker nodes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9998e8428c3138e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s_workers_basic-cluster",
            "name_prefix": "",
            "owner_id": "077560370356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "basic-cluster_nodes",
              "kubernetes.io/cluster/basic-cluster": "owned"
            },
            "tags_all": {
              "Name": "basic-cluster_nodes",
              "kubernetes.io/cluster/basic-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "masters_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-527056098",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dbbda2a974714cc7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_security_group.k8s_master_nodes",
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "traffic_from_bastion_to_masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Traffic from the bastion node to the master node is allowed",
            "from_port": 22,
            "id": "sgrule-738336373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dbbda2a974714cc7",
            "self": false,
            "source_security_group_id": "sg-003f2d1079edb8b05",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_security_group.bastion_node",
            "module.kubernetes.aws_security_group.k8s_master_nodes",
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "traffic_from_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow API traffic from the load balancer",
            "from_port": 6443,
            "id": "sgrule-1518391313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dbbda2a974714cc7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_security_group.k8s_master_nodes",
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "traffic_from_workers_to_masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Traffic from the worker nodes to the master nodes is allowed",
            "from_port": 0,
            "id": "sgrule-1612948907",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dbbda2a974714cc7",
            "self": false,
            "source_security_group_id": "sg-0a9998e8428c3138e",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_security_group.k8s_master_nodes",
            "module.kubernetes.aws_security_group.k8s_worker_nodes",
            "module.kubernetes.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:subnet/subnet-07e988f6482259664",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e988f6482259664",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077560370356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet01-basic-cluster",
              "kubernetes.io/cluster/basic-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet01-basic-cluster",
              "kubernetes.io/cluster/basic-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:subnet/subnet-0fa1dbad54acebf8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa1dbad54acebf8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077560370356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet01-basic-cluster",
              "kubernetes.io/cluster/basic-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet01-basic-cluster",
              "kubernetes.io/cluster/basic-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "utility",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:subnet/subnet-06243b77948e6d5d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06243b77948e6d5d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077560370356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utility"
            },
            "tags_all": {
              "Name": "utility"
            },
            "vpc_id": "vpc-0faa126c2b365b656"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:077560370356:vpc/vpc-0faa126c2b365b656",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5564b407635e82f",
            "default_route_table_id": "rtb-0dd5654794d440f36",
            "default_security_group_id": "sg-0a541de8fd4c203ee",
            "dhcp_options_id": "dopt-0fa55f53864b2d312",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0faa126c2b365b656",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd5654794d440f36",
            "owner_id": "077560370356",
            "tags": {
              "Name": "kubernetes"
            },
            "tags_all": {
              "Name": "kubernetes"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}